<resources>
    <string name="app_name">TestChat</string>
    <string name="username">Username</string>
    <string name="create_a_new_account">Create a new Account!</string>
    <string name="e_mail">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login_heading">Login to your account</string>
    <string name="login">login</string>
    <string name="chat_app">Chat App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_a_message">Type a message...</string>
    <string name="hello">Hello</string>
    <string name="profile">Profile</string>
    <string name="search">Search...</string>
    <string name="seen">Seen</string>
    <string name="forgot_your_password">Whoopsie! Forgot your Password?</string>
    <string name="your_email">Your Email</string>
    <string name="reset">Reset</string>
    <string name="message_reset">By clicking RESET, you will receive an email to reset your password</string>
</resources>
